<resources>
    <string name="app_name">Mera Bills Payments App</string>
    <string name="total_amount">Total Amount:</string>
    <string name="add_payment">Add Payment</string>
    <string name="save">Save</string>
    <string name="please_enter_amount_below">Enter payment details below.</string>
    <string name="payment_statistics">Payment Info</string>
    <string name="cancel">Cancel</string>
    <string name="enter_amount">Enter amount</string>
    <string name="ok">Ok</string>
    <string name="enter_transaction_reference">Enter transaction reference number</string>
    <string name="transaction_reference">Transaction Reference</string>
    <string name="enter_provider_name">Enter provider bank name</string>
    <string name="provider_name">Provider Name</string>
    <string name="payment_type">Payment Type</string>
    <string name="amount">Amount</string>
    <string name="all_payment_types_are_utilised">All payment types are utilised.</string>
    <string name="payment_saved_successfully">Payment saved successfully.</string>
    <string name="payment_added_successfully">Payment added successfully.</string>
    <string name="some_error">Some error occurred, Please try again.</string>

    <string-array name="payment_types">
        <item>Cash</item>
        <item>Bank Transfer</item>
        <item>Credit Card</item>
    </string-array>
</resources>